k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-web-platform-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-web-platform
      version: green
  template:
    metadata:
      labels:
        app: devops-web-platform
        version: green
    spec:
      containers:
        - name: web
          image: devops-web-platform:1.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
