k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-web-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-web-platform
  template:
    metadata:
      labels:
        app: devops-web-platform
        version: blue
    spec:
      containers:
        - name: web
          image: zelgius/devops-web-platform:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
