k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-web-platform
spec:
  selector:
    app: devops-web-platform
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
